hphp/hack/test/typecheck/lsb_private_disallow.php.exp
File "lsb_private_disallow.php", line 9, characters 20-21:
You cannot access this member (Typing[4112])
File "lsb_private_disallow.php", line 4, characters 28-30:
This member is private
